--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
     background-color: #da2837;
 }
 form {
+    padding: 30px;
     margin: 0 auto;
     width: 600px;
     height: fit-content;
@@ -63,6 +64,10 @@ input:focus {
     width: 150px;
     height: fit-content;
     background-color: white;
+    border: black solid 2px;
     border-radius: 10px;
     padding: 10px;
+}
+h3 {
+    margin-bottom: 10px;
 }
