--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    color: white;
 }
 .main-div {
     display: flex;
@@ -27,9 +28,30 @@
 .third-column {
     background-color: #da2837;
 }
+#modal-button {
+    height: 100px;
+    width: 100px;
+    border-radius: 90px;
+    font-size: 18px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 0 20px 20px 0;
+}
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+.closedModal {
+    display: none;
+}
 form {
     padding: 30px;
-    margin: 0 auto;
+    margin: 15% auto;
     width: 600px;
     height: fit-content;
     font-size: 32px;
@@ -37,12 +59,16 @@ form {
     /*background-image: url("../img/form-bg.jpg");*/
     /*background-repeat: no-repeat;*/
     background-color: #3c65ff;
-    border-top: white solid 3px;
     border-radius: 10px;
+    border: 3px solid white;
     display: flex;
     gap: 10px;
     flex-direction: column;
     text-align: center;
+}
+h2 {
+    text-align: center;
+    color: white;
 }
 input, button {
     font-size: 24px;
