--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    color: white;
 }
 .main-div {
     display: flex;
@@ -28,6 +27,9 @@
 .third-column {
     background-color: #da2837;
 }
+.no-marker {
+    list-style-type: none;
+}
 #modal-button {
     height: 100px;
     width: 100px;
@@ -45,9 +47,6 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-}
-.closedModal {
-    display: none;
 }
 form {
     padding: 30px;
@@ -87,7 +86,6 @@ input:focus {
     color: rgba(255, 255, 255, 0.5);
 }
 .content {
-    width: 150px;
     height: fit-content;
     background-color: white;
     border: black solid 2px;
@@ -95,5 +93,6 @@ input:focus {
     padding: 10px;
 }
 h3 {
+    text-align: center;
     margin-bottom: 10px;
 }
