--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,17 @@
     height: 100vh;
     justify-content: space-between;
 }
+.block {
+    background: rgba(0, 0, 0, 0.5);
+    background-image: url("img/lock.jpg");
+}
 .column {
     width: 100%;
     display: flex;
+    min-height: fit-content;
     flex-direction: column;
     gap: 10px;
     padding: 20px;
-    flex-wrap: wrap;
 }
 .first-column {
     background-color: #3c65ff;
@@ -49,14 +53,12 @@
     background: rgba(0, 0, 0, 0.5);
 }
 form {
+    margin: 10% auto 0 auto;
     padding: 30px;
-    margin: 15% auto;
     width: 600px;
     height: fit-content;
     font-size: 32px;
     color: white;
-    /*background-image: url("../img/form-bg.jpg");*/
-    /*background-repeat: no-repeat;*/
     background-color: #3c65ff;
     border-radius: 10px;
     border: 3px solid white;
